# my-template

./: .gitattributes  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.en.md  README.md  package.json  pnpm-lock.yaml
.cargo/: audit.toml
.claude/: launch.json
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-demo.yml  tauri-check.yml  template-acceptance.yml  visual-baselines.yml
apps/admin-template/: package.json  svelte.config.js  vite.config.ts
apps/admin-template/core/: Cargo.toml
apps/admin-template/core/migrations/: 0001_items.sql  0003_users.sql  0005_audit_log.sql  0006_attachments.sql
apps/admin-template/core/src/: audit.rs  backup.rs  db.rs  items.rs  lib.rs  rest.rs  settings.rs  users.rs
apps/admin-template/core/src/rest/: attachments.rs  audit.rs  auth.rs  backups.rs  items.rs  mod.rs  tests.rs  ui_settings.rs  users.rs
apps/admin-template/src/: app.css  app.html
apps/admin-template/src-tauri/: Cargo.toml  tauri.conf.json
apps/admin-template/src-tauri/capabilities/: default.json
apps/admin-template/src-tauri/src/: keyring_store.rs  lib.rs  main.rs
apps/admin-template/src/lib/: auth.ts  commandPalette.svelte.ts  commands.ts  navigation.ts  session.svelte.ts  settings.svelte.ts  toast.svelte.ts
apps/admin-template/src/lib/banto/: attachmentsAdmin.ts  attachmentsClient.ts  auditLogAdmin.ts  authAdmin.ts  backupsAdmin.ts  dashboard.ts  environment.ts  itemsAdmin.ts  panels.ts  popout.ts  sampleData.ts  serverAdmin.ts  setup.ts  usersAdmin.ts  vibrancy.ts
apps/admin-template/src/lib/banto/providers/: demo.ts
apps/admin-template/src/lib/banto/reports/: daily.md  raw.d.ts
apps/admin-template/src/lib/banto/resources/: index.ts  items.ts
apps/admin-template/src/lib/components/: CommandPalette.svelte  DashboardPanel.svelte  Header.svelte  Sidebar.svelte  ToastHost.svelte  navIcons.ts
apps/admin-template/src/routes/: +layout.svelte  +layout.ts  +page.ts
apps/admin-template/src/routes/(app)/: +layout.svelte  +layout.ts
apps/admin-template/src/routes/(app)/audit-log/: +page.svelte  +page.ts
apps/admin-template/src/routes/(app)/dashboard/: +page.svelte
apps/admin-template/src/routes/(app)/items/: +page.svelte  ItemsClientGrid.svelte  ItemsServerGrid.svelte  data.ts
apps/admin-template/src/routes/(app)/items/[id]/: +page.svelte
apps/admin-template/src/routes/(app)/items/new/: +page.svelte
apps/admin-template/src/routes/(app)/items/report/: +page.svelte
apps/admin-template/src/routes/(app)/settings/: +page.svelte
apps/admin-template/src/routes/(app)/users/: +page.svelte  +page.ts
apps/admin-template/src/routes/login/: +page.svelte
apps/admin-template/src/routes/panel/[id]/: +page.svelte
crates/banto-attachments/: Cargo.toml
crates/banto-attachments/src/: lib.rs
crates/banto-core/: Cargo.toml
crates/banto-core/src/: error.rs  lib.rs  params.rs
crates/banto-server/: Cargo.toml
crates/banto-server/src/: auth.rs  events.rs  lib.rs  security_headers.rs  server.rs
crates/banto-storage/: Cargo.toml
crates/banto-storage/src/: error.rs  lib.rs  list_query.rs  sqlite.rs
docs/: adoption-plan-2026-07.md  adoption-review-2026-07.md  attachments-plan.md  conventions.md  handoff-2026-07-22.md  i18n-plan.md  improvement-plan-2026-07.md  improvements.md  industrial-plan.md  maintainability-review-2026-07.md  plan-review-integration-2026-07.md  publishing.md  remaining-work-2026-07-23.md  report-plan.md  roadmap.md  scaffold-presets-plan.md  template-scope.md  ui-framework-spec.md  visual-refresh-design.md  visual-refresh-plan.md
docs/adr/: 0000-template.md  0001-rest-tauri-two-path-symmetry.md  0002-minimal-dependencies.md  0003-tls-via-reverse-proxy.md  0004-server-logging-eprintln.md  README.md
docs/history/: improvements-archive.md
docs/recipes/: add-resource.md
e2e/: global-teardown.ts  playwright.config.ts  tsconfig.json
e2e/tests/: smoke.spec.ts
e2e/visual/: README.md  a11y.spec.ts  theme.ts  visual.spec.ts
scripts/: check-versions.mjs  rename.mjs  verify-architecture.mjs
