[package]
name = "banto-storage"
description = "Banto storage: sqlx-based SQLite/PostgreSQL repository implementations (M2+)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]

[dependencies]
banto-core = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
