[package]
name = "admin-template-core"
description = "admin-template domain/service layer (spec §10): shared by Tauri commands now, REST in M6"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
# Embeds the SvelteKit static build (`apps/admin-template/build`, gitignored)
# into the binary via rust-embed. Off by default so the workspace builds on
# a fresh clone without requiring `pnpm --filter admin-template build` to
# have been run first (spec §11.1).
embed-ui = ["dep:rust-embed"]

[dependencies]
banto-core = { workspace = true }
banto-storage = { workspace = true, features = ["sqlite"] }
banto-server = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
# `fs` (spec M17): `crate::backup::BackupService` reads/writes `backups/`
# and the pending-restore file directly via `tokio::fs`. Cargo's feature
# unification already pulls this in transitively via `sqlx`'s
# `runtime-tokio` feature, but naming it explicitly here means this crate
# does not silently depend on another dependency's feature choices.
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "signal", "fs"] }
rust-embed = { workspace = true, optional = true }
argon2 = { workspace = true }
password-hash = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tower = { workspace = true, features = ["util"] }
tempfile = { workspace = true }

[[bin]]
name = "banto-serve"
path = "src/bin/banto-serve.rs"
